BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Environment_Manager_vod__c.object
<CustomObject>
    <description>PMO Tool Kit - used for capturing Environment Managers aligned to an Environment</description>
    <fields>
        <fullName>Access_Granted_vod__c</fullName>
        <label>Access Granted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Access_Level_vod__c</fullName>
        <label>Access Level</label>
        <picklist>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Tester</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Access_Reason_vod__c</fullName>
        <label>Access Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Access_Removal_vod__c</fullName>
        <label>Access Removal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Environment_Manager_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Environment Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Environment_Managers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Environment_vod__c</fullName>
        <label>Environment</label>
        <referenceTo>Environment_vod__c</referenceTo>
        <relationshipLabel>Environment Managers</relationshipLabel>
        <relationshipName>Environment_Managers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Environment Manager</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Environment Manager Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Environment Managers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>